# Taobao

./: .gitignore  README.md  install-and-start.cmd  install.ps1  main.py  pyproject.toml  requirements.txt  start-v2.ps1
.github/workflows/: tests.yml
docs/: 2026-07-13-afternoon-development-record.md  delivery-guide.md  github-web-and-desktop-submission-guide.md  single_account_checkout_plan.md
src/: __init__.py  app_config.py  cdp_client.py  cli.py  environment_check.py  gui_v2.py  page_automation.py  paths.py  product_urls.py  safe_browser.py  task_runner.py  v2_store.py
tests/: test_app_config.py  test_browser_checkout_flow.py  test_environment_check.py  test_gui_v2.py  test_page_automation.py  test_paths.py  test_product_urls.py  test_safe_browser.py  test_task_runner.py  test_v2_store.py
tests/mock_shop/: confirm.html  pending.html  privacy.html  product.html
